[gd_scene load_steps=4 format=3 uid="uid://b3brogqbvc824"]

[ext_resource type="Script" uid="uid://bsonh486cdlxx" path="res://scripts/interation_area.gd" id="2_ar3n7"]
[ext_resource type="Script" uid="uid://b28ajxtd364d2" path="res://scripts/weapon_pickup.gd" id="2_ydbeo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydbeo"]
radius = 23.3429

[node name="WeaponPickUp" type="Sprite2D" node_paths=PackedStringArray("interaction_area")]
scale = Vector2(3, 3)
script = ExtResource("2_ydbeo")
interaction_area = NodePath("InteractionArea")

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource("2_ar3n7")
action_text = "Pick Up"
metadata/_custom_type_script = "uid://bsonh486cdlxx"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_ydbeo")
